--- a/Messenger/Base.lproj/Main.storyboard
+++ b/Messenger/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="GEq-V4-YiZ">
-                                <rect key="frame" x="16" y="132" width="382" height="213"/>
+                                <rect key="frame" x="16" y="132" width="382" height="139.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uua-Hy-ywL">
                                         <rect key="frame" x="0.0" y="0.0" width="382" height="27.5"/>
@@ -76,8 +76,8 @@
                                             <constraint firstAttribute="height" constant="2" id="cNM-dv-Xkr"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Pa-0a-CIP">
-                                        <rect key="frame" x="0.0" y="148.5" width="382" height="27.5"/>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Pa-0a-CIP">
+                                        <rect key="frame" x="0.0" y="139.5" width="382" height="27.5"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="27.5" id="jW6-xb-FBx"/>
                                         </constraints>
@@ -85,16 +85,16 @@
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Repeat Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GO0-hV-7fn">
-                                        <rect key="frame" x="0.0" y="185" width="382" height="17"/>
+                                    <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Repeat Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GO0-hV-7fn">
+                                        <rect key="frame" x="0.0" y="139.5" width="382" height="17"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="17" id="BXF-1i-9Gt"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gBO-qV-giB">
-                                        <rect key="frame" x="0.0" y="211" width="382" height="2"/>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gBO-qV-giB">
+                                        <rect key="frame" x="0.0" y="139.5" width="382" height="2"/>
                                         <color key="backgroundColor" systemColor="systemGrayColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="2" id="Dln-mJ-9BE"/>
@@ -103,7 +103,7 @@
                                 </subviews>
                             </stackView>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VwW-Bn-oz0">
-                                <rect key="frame" x="278" y="365" width="120" height="32"/>
+                                <rect key="frame" x="278" y="291.5" width="120" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="aIK-Qt-CH4"/>
                                     <constraint firstAttribute="height" constant="32" id="bl2-h7-r3P"/>
@@ -118,7 +118,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uYS-aI-PHe">
-                                <rect key="frame" x="16" y="365" width="232" height="32"/>
+                                <rect key="frame" x="16" y="291.5" width="232" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="32" id="Ll1-9X-Hk7"/>
                                 </constraints>
@@ -132,7 +132,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PGz-wE-veE">
-                                <rect key="frame" x="48" y="417" width="318" height="76"/>
+                                <rect key="frame" x="48" y="343.5" width="318" height="76"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="loginBtn"/>
                                 <connections>
