--- a/Messenger/Base.lproj/Main.storyboard
+++ b/Messenger/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                             <constraint firstAttribute="height" constant="18.5" id="tWo-TC-EXz"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                                     </textField>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oRz-BA-r3U">
                                         <rect key="frame" x="0.0" y="64" width="382" height="2"/>
@@ -196,6 +196,56 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="28.985507246376812" y="83.705357142857139"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="dak-5L-2Uv">
+            <objects>
+                <viewController id="Au0-Kh-U8N" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ozF-4s-Pxh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="gis-6g-aDf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="B8y-C8-SEC"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OpA-7h-zZj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1987" y="397"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="59s-it-4rC">
+            <objects>
+                <viewController id="0uX-V5-1n9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4XW-Ao-FFg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="q5b-Bf-NGE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="Dfv-pD-GXA"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cq3-rK-9ob" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1987" y="-208"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="8oG-aS-ubg">
+            <objects>
+                <tabBarController storyboardIdentifier="MainView" id="go6-fb-AHR" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="biA-aM-zRe">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="0uX-V5-1n9" kind="relationship" relationship="viewControllers" id="pWG-99-qjC"/>
+                        <segue destination="Au0-Kh-U8N" kind="relationship" relationship="viewControllers" id="D32-O0-Wo2"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1wX-Yz-ODJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1042" y="84"/>
         </scene>
     </scenes>
     <resources>
